--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -3,7 +3,8 @@ header {
     flex-direction: row;
     align-items: center;
     width: 75%;
-    margin: 1em;
+    margin-top: 1em;
+    margin-bottom: -0.5em;
     background-color: #333333;
 }
 
