--- a/src/components/styles/story.css
+++ b/src/components/styles/story.css
@@ -4,7 +4,7 @@
     flex-direction: row;
     justify-content: left;
     align-items: center;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
     background-color: white;
     height: 3em;
 }
