css changes for mobile

--- a/src/components/styles/pagination.css
+++ b/src/components/styles/pagination.css
@@ -7,3 +7,11 @@
     margin: 1em;
     width: 7em;
 }
+
+@media screen and (max-width: 480px) {
+    #paginationContainer button {
+        margin: 1em;
+        width: 8em;
+        height: 3em;
+    }
+}
