--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -20,6 +20,8 @@ header p {
 #titleContainer {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 
