--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,21 @@
   margin: 10em;
 }
 
+#statement {
+  margin-top: 1em;
+  display: flex;
+  flex-direction: column;
+  width: 75%;
+}
+
+#statement sub {
+  font-size: 0.75em;
+}
+
+#version {
+  font-size: 0.5em!important;
+}
+
 @media screen and (max-width: 480px) {
   #Stories {
     width: 100%;
