--- a/src/components/styles/story.css
+++ b/src/components/styles/story.css
@@ -18,13 +18,24 @@
 }
 
 .storyUrl {
-    font-size: 0.5em;
+    font-size: 0.6em;
     color: gray;
+    margin-right: 1em;
+    width: 17em;
 }
 
 .storyDetailLink {
     color: #333333;
     text-decoration: none;
+    width: 90%;
+    text-align: left;
+}
+
+#divider {
+    width: 1px;
+    height: 100%;
+    background-color: gray;
+    margin-right: 1em;
 }
 
 @media screen and (max-width: 480px) {
@@ -37,6 +48,10 @@
         box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
         background-color: white;
         height: 8em;
+    }
+
+    #divider {
+        display: none;
     }
 
     .storyUrl {
