--- a/src/components/styles/story.css
+++ b/src/components/styles/story.css
@@ -15,6 +15,7 @@
 
 .storyTitle {
     padding-left: 1em;
+    text-align: left;
 }
 
 .storyUrl {
@@ -31,11 +32,17 @@
     text-align: left;
 }
 
-#divider {
+#verticalDivider {
     width: 1px;
     height: 100%;
     background-color: gray;
     margin-right: 1em;
+}
+
+@media screen and (min-width: 480px) {
+    #horizontalDivider {
+        display: none;
+    }
 }
 
 @media screen and (max-width: 480px) {
@@ -50,13 +57,14 @@
         height: 8em;
     }
 
-    #divider {
+    #verticalDivider {
         display: none;
     }
 
     .storyUrl {
         padding: 0;
-        font-size: 1em;
+        margin-top: 0.5em;
+        font-size: 0.75em;
     }
 
     .storyTitle {
