--- a/src/pages/styles/storyDetail.css
+++ b/src/pages/styles/storyDetail.css
@@ -6,7 +6,7 @@
     align-items: center;
 }
 
-#storyContainer {
+#subDetailContainer {
     width: 75%;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
     display: flex;
