--- a/src/components/styles/story.css
+++ b/src/components/styles/story.css
@@ -93,16 +93,14 @@
     flex-direction: row;
 }
 
-.storyAuthorContainer div {
+.storyAuthorContainer {
     display: flex;
+    align-items: center;
     flex-direction: row;
 }
 
-
-
 @media screen and (max-width: 480px) {
     .story {
-        margin: 1em;
         display: flex;
         flex-direction: column;
         justify-content: left;
