--- a/src/components/styles/pagination.css
+++ b/src/components/styles/pagination.css
@@ -1,6 +1,8 @@
 #paginationContainer {
     margin-bottom: 3em;
     margin-top: 1em;
+    display: flex;
+    flex-direction: row;
 }
 
 #paginationContainer button {
