--- a/src/pages/styles/storyDetail.css
+++ b/src/pages/styles/storyDetail.css
@@ -68,6 +68,10 @@
         box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
     }
 
+    #subDetailContainer {
+        width: 100%;
+    }
+
     #textContainer {
         display: flex;
         justify-content: center;
@@ -77,7 +81,6 @@
     }
 
     #textContainer a {
-        margin-right: 1em;
         min-width: 10%;
     }
 
