--- a/src/pages/styles/storyDetail.css
+++ b/src/pages/styles/storyDetail.css
@@ -12,10 +12,13 @@
     display: flex;
     flex-direction: column;
     background-color: #FAFAFA;
+    justify-content: center;
+    align-items: center;
 }
 
 #textContainer {
     display: flex;
+    width: 100%;
     justify-content: center;
     flex-direction: row;
     align-items: center;
@@ -23,6 +26,7 @@
 
 #commentsContainer {
     margin-bottom: 10em;
+    width: 100%;
 }
 
 #commentsDivider span {
@@ -47,6 +51,7 @@
     width: 90%;
 }
 
+
 .storyDetailTitle {
     margin-top: 1em;
     color: #333333;
@@ -62,6 +67,22 @@
     margin-top: 1em;
 }
 
+
+.storyDetailImage {
+    width: 150px;
+    height: 150px;
+}
+
+.noStoryDetailImage {
+    border: 1px solid gray;
+    text-align: center;
+    width: 300px;
+    height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 @media screen and (max-width: 480px) {
     #storyContainer {
         width: 100%;
@@ -72,16 +93,21 @@
         width: 100%;
     }
 
+    .storyDetailImage {
+        width: 300px;
+        height: 300px;
+    }
+
     #textContainer {
         display: flex;
         justify-content: center;
-        align-items: center;
         margin-top: 1em;
         min-width: 100%;
     }
 
     #textContainer a {
-        min-width: 10%;
+        min-width: 35%;
+        margin-left: -3em;
     }
 
     .storyDetailTitle {
