--- a/src/components/styles/story.css
+++ b/src/components/styles/story.css
@@ -81,11 +81,12 @@
     text-decoration: none;
     width: 100%;
     text-align: left;
+    margin-left: 1em;
 }
 
 .thumbnailContainer {
-    min-width: 110px;
-    min-height: 110px;
+    min-width: 100px;
+    min-height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
