--- a/src/pages/styles/storyDetail.css
+++ b/src/pages/styles/storyDetail.css
@@ -7,7 +7,7 @@
 }
 
 #subDetailContainer {
-    width: 75%;
+    width: 60%;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
     display: flex;
     flex-direction: column;
@@ -71,6 +71,7 @@
 .storyDetailImage {
     width: 150px;
     height: 150px;
+    margin-bottom: 1em;
 }
 
 .noStoryDetailImage {
