--- a/src/components/styles/story.css
+++ b/src/components/styles/story.css
@@ -119,7 +119,6 @@
         align-items: center;
         box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
         background-color: white;
-        min-height: 10em;
         max-height: 10em;
     }
 
@@ -154,6 +153,7 @@
         flex-direction: row;
         width: 100%;
         margin-top: 0.25em;
+        margin-bottom: 0.25em;
     }
 
     .storyLinkContainer {
