--- a/src/components/styles/story.css
+++ b/src/components/styles/story.css
@@ -6,19 +6,29 @@
     align-items: center;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
     background-color: #FAFAFA;
+    width: 100%;
+}
+
+.mainContentContainer {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.horizontalDivider {
+    width:  100%;
 }
 
 .storyImage, .noStoryImage {
-    height: 90px;
-    width: 90px;
-    margin: 0.25em;
+    height: 75px;
+    width: 75px;
 }
 
 .noStoryImage {
     border: 1px solid gray;
     text-align: center;
-    min-width: 75px;
-    min-height: 75px;
+    width: 75px;
+    height: 75px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -34,6 +44,7 @@
     display: flex;
     flex-direction: row;
     justify-content: left;
+
 }
 
 .storyInformationContainer p, .storyInformationContainer a {
@@ -65,12 +76,14 @@
 
 .storyTitle {
     text-align: left;
+    font-size: 1.1rem;
+    margin-right: 1em;
+    margin-left: 0.5em;
 }
 
 .storyUrl {
     font-size: 0.6em;
     color: gray;
-    margin-bottom: 0.5em;
 }
 
 .storyDetailLink {
@@ -81,21 +94,24 @@
     text-decoration: none;
     width: 100%;
     text-align: left;
-    margin-left: 1em;
+    margin-left: 0.5em;
+    min-height: 70px;
+    max-height: 70px;
 }
 
 .thumbnailContainer {
-    min-width: 100px;
-    min-height: 100px;
+    min-width: 75px;
+    min-height: 75px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-right: 1em;
 }
 
 .storyIndex {
-    margin-left: 0.5em;
+    margin-left: 0.1em;
+    margin-right: 0.25em;
+    margin-top: 0;
     font-size: 0.75em;
     color: gray;
 }
@@ -110,6 +126,7 @@
     display: flex;
     align-items: center;
     flex-direction: row;
+    margin-left: 0.5em;
 }
 
 .commentContainer {
@@ -124,23 +141,21 @@
         align-items: center;
         box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
         background-color: white;
+        width: 100%;
+    }
+
+    .thumbnailContainer {
+        height: 100px;
+        width: 100px;
     }
 
     .storyDetailLink {
-        min-height: 7em;
-        max-height: 7em;
+        min-height: 5em;
+        max-height: 5em;
     }
 
     .storyUrl {
         display: none;
-    }
-
-    .storyTitle {
-        padding-top: 0.5em;
-    }
-
-    .noStoryImage p {
-        font-size: 0.5em;
     }
 
     .storyInformationContainer {
@@ -159,8 +174,6 @@
         align-items: center;
         flex-direction: row;
         width: 100%;
-        margin-top: 0.25em;
-        margin-bottom: 0.25em;
     }
 
     .storyLinkContainer {
