--- a/src/pages/styles/storyDetail.css
+++ b/src/pages/styles/storyDetail.css
@@ -4,6 +4,16 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    margin-top: -2em;
+}
+
+#noCommentsImage {
+    width: 25%;
+    height: 25%;
+}
+
+#noCommentsText {
+    color: gray;
 }
 
 #subDetailContainer {
@@ -73,7 +83,7 @@
 }
 
 #backButton {
-    margin: 1em;
+    margin: 0.5em;
 }
 
 .storyDetailImage {
