--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,15 @@
+#App {
+  width: 100%;
+  overflow-x: hidden;
+}
+
 #topLevelContainer {
   text-align: center;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  margin-top: -3em;
+  margin-top: -2.5em;
 }
 
 #Stories {
